force-app/main/default/objects/TentativaQuestao__c/TentativaQuestao__c.object-meta.xml
<CustomObject>
    <label>Tentativa de Questão</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tentativas de Questão</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>