force-app/main/default/objects/TentativaQuestao__c/fields/Acertou__c.field-meta.xml
<CustomField>
    <fullName>Acertou__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acertou</label>
    <type>Checkbox</type>
</CustomField>