force-app/main/default/objects/TentativaQuestao__c/fields/AutoClassificacaoDificuldade__c.field-meta.xml
<CustomField>
    <fullName>AutoClassificacaoDificuldade__c</fullName>
    <label>Auto-classificação de Dificuldade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MuitoFacil</fullName>
                <label>Muito Fácil</label>
            </value>
            <value>
                <fullName>Facil</fullName>
                <label>Fácil</label>
            </value>
            <value>
                <fullName>Media</fullName>
                <label>Média</label>
            </value>
            <value>
                <fullName>Dificil</fullName>
                <label>Difícil</label>
            </value>
            <value>
                <fullName>MuitoDificil</fullName>
                <label>Muito Difícil</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>