force-app/main/default/objects/TentativaQuestao__c/fields/FatorAntes__c.field-meta.xml
<CustomField>
    <fullName>FatorAntes__c</fullName>
    <label>Fator Antes</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>