force-app/main/default/objects/TentativaQuestao__c/fields/FatorDepois__c.field-meta.xml
<CustomField>
    <fullName>FatorDepois__c</fullName>
    <label>Fator Depois</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>