force-app/main/default/objects/TentativaQuestao__c/fields/IntervaloAntesDias__c.field-meta.xml
<CustomField>
    <fullName>IntervaloAntesDias__c</fullName>
    <label>Intervalo Antes (Dias)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>