force-app/main/default/objects/TentativaQuestao__c/fields/IntervaloDepoisDias__c.field-meta.xml
<CustomField>
    <fullName>IntervaloDepoisDias__c</fullName>
    <label>Intervalo Depois (Dias)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>