force-app/main/default/objects/TentativaQuestao__c/fields/NotaQualidade__c.field-meta.xml
<CustomField>
    <fullName>NotaQualidade__c</fullName>
    <label>Nota de Qualidade</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>