force-app/main/default/objects/TentativaQuestao__c/fields/ProgressoQuestaoUsuario__c.field-meta.xml
<CustomField>
    <fullName>ProgressoQuestaoUsuario__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Progresso da Questão do Usuário</label>
    <referenceTo>ProgressoQuestaoUsuario__c</referenceTo>
    <relationshipLabel>Tentativas</relationshipLabel>
    <relationshipName>Tentativas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>