force-app/main/default/objects/TentativaQuestao__c/fields/Questao__c.field-meta.xml
<CustomField>
    <fullName>Questao__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Questão</label>
    <referenceTo>Questao__c</referenceTo>
    <relationshipLabel>Tentativas</relationshipLabel>
    <relationshipName>TentativasQuestao</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>