force-app/main/default/objects/TentativaQuestao__c/fields/RespondidaEm__c.field-meta.xml
<CustomField>
    <fullName>RespondidaEm__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Respondida em</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>