force-app/main/default/objects/TentativaQuestao__c/fields/SessaoEstudo__c.field-meta.xml
<CustomField>
    <fullName>SessaoEstudo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sessão de Estudo</label>
    <referenceTo>SessaoEstudo__c</referenceTo>
    <relationshipLabel>Tentativas</relationshipLabel>
    <relationshipName>Tentativas</relationshipName>
    <type>Lookup</type>
</CustomField>