force-app/main/default/objects/TentativaQuestao__c/fields/StatusAntes__c.field-meta.xml
<CustomField>
    <fullName>StatusAntes__c</fullName>
    <label>Status Antes</label>
    <length>50</length>
    <type>Text</type>
</CustomField>