force-app/main/default/objects/TentativaQuestao__c/fields/StatusDepois__c.field-meta.xml
<CustomField>
    <fullName>StatusDepois__c</fullName>
    <label>Status Depois</label>
    <length>50</length>
    <type>Text</type>
</CustomField>