force-app/main/default/objects/TentativaQuestao__c/fields/TempoRespostaSegundos__c.field-meta.xml
<CustomField>
    <fullName>TempoRespostaSegundos__c</fullName>
    <label>Tempo de Resposta (Segundos)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>